# xorcrypt

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.787EEA5B83C2299E.idx  main.cpp.8609CCA35C9F9E80.idx
src/: main.cpp
src/.cache/clangd/index/: main.cpp.8609CCA35C9F9E80.idx
